[project]
name = "ml-gen"
version = "0.0.0"
description = "Package for General Development of Machine Learning Projects"
authors = [{name = "Henrique Aguiar", email = "hruiaguiar@gmail.com"}]
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "pytorch-lightning",
    "torchmetrics",
    "scipy",
    "tqdm",
    "loguru",
]

[tool.uv]
# optional: allows uv to manage virtualenv automatically
virtual = true
